--- a/src/app/division/division.component.html
+++ b/src/app/division/division.component.html
@@ -6,12 +6,14 @@
 
                 </div>
                 <div class="card-body">
+                    <a href="" class="btn btn-primary mb-3">Tambah Data</a>
                     <table class="table table-head-fixed text-nowrap">
                         <thead>
                             <tr>
                                 <th>ID</th>
                                 <th>Name</th>
                                 <th>Description</th>
+                                <th>Action</th>
                             </tr>
                         </thead>
                         <tbody *ngFor="let currentDivision of divisions; let i = index">
@@ -19,6 +21,8 @@
                                 <td>{{currentDivision._id}}</td>
                                 <td>{{currentDivision.name}}</td>
                                 <td>{{currentDivision.description}}</td>
+                                <td><a href="" class="btn btn-info mb-3">Edit</a>
+                                    <a href="" class="btn btn-info mb-3">Hapus</a></td>
                             </tr>
                         </tbody>
                     </table>
